--- a/css/questions.css
+++ b/css/questions.css
@@ -21,10 +21,10 @@
     Q3 - What CSS property are you having the most trouble figuring out?
 */
 
-/* SCSS - I have to force myself to slow down and anticipate rather than barge in like a barbarian and fix the problems later
+SCSS - I have to force myself to slow down and anticipate rather than barge in like a barbarian and fix the problems later
 
 /*
     Q4 - What is the best CSS property and why?
 */
 
-/* Flexbox - I love centering things on both axis instead of just one. You'll find almost all my hero elements are centered vertically/horizontally now thanks to flexbox.
+Flexbox - I love centering things on both axis instead of just one. You'll find almost all my hero elements are centered vertically/horizontally now thanks to flexbox.
